# 100-000-RAG

./: .gitignore  README.md
rag_system/: .env.example  DOCKER.md  README.md  __init__.py  docker-compose.yml  pyproject.toml
rag_system/config/: __init__.py  logging_config.yaml  settings.py
rag_system/core/: __init__.py
rag_system/core/cache/: __init__.py  semantic_cache.py
rag_system/core/chunking/: __init__.py  semantic_chunker.py
rag_system/core/generation/: __init__.py  llm_factory.py  rag_generator.py
rag_system/core/indexing/: __init__.py  document_indexer.py
rag_system/core/monitoring/: __init__.py  rag_monitor.py
rag_system/core/retrieval/: __init__.py  base_retriever.py  cross_encoder.py  hybrid_retriever.py  local_embedder.py
rag_system/embedding_service/: server.py
rag_system/examples/: client.py
rag_system/notebooks/: experiments.ipynb
rag_system/pipelines/: __init__.py  generation_pipeline.py  ingest_pipeline.py  retrieval_pipeline.py
rag_system/scripts/: __init__.py  load_test.py  migrate_qdrant.py  monitor_dashboard.py
