[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "tiktoken>=0.12.0",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    # Vector database
    "qdrant-client>=1.15.1",
    # Caching
    "redis>=7.0.1",
    # Retrieval
    "sentence-transformers>=5.1.2",
    "rank-bm25>=0.2.2",
    # Configuration
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    # Logging
    "python-json-logger>=4.0.0",
    # Testing
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    # Development
    "black>=25.11.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "google-genai>=1.49.0",
]
