[project]
name = "rag-system"
version = "0.1.0"
description = "Production-ready Retrieval-Augmented Generation (RAG) system with hybrid retrieval, semantic caching, and multi-backend LLM support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.12.0,<1.0",
    "numpy>=2.3.4,<3.0",
    "openai>=2.7.2,<4.0",
    "qdrant-client>=1.15.1,<2.0",
    "redis>=7.0.1,<9.0",
    "sentence-transformers>=5.1.2,<6.0",
    "rank-bm25>=0.2.2,<1.0",
    "python-dotenv>=1.2.1,<2.0",
    "pydantic>=2.12.4,<3.0",
    "python-json-logger>=4.0.0,<5.0",
    "google-genai>=1.49.0,<2.0",
    "requests>=2.31.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0",
    "pytest-cov>=7.0.0,<8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "black>=25.11.0,<26.0",
    "ruff>=0.14.4,<0.15",
    "mypy>=1.18.2,<2.0",
]
